style.css
/* Styles go here */
body {
    font: normal x-small verdana,arial,helvetica,sans-serif;
    background-color: white;
    z-index: 1;
    min-height: 100%;

}

div, p {
    margin: 0;
    padding: 0;
}

.reddit-form {
  margin-bottom: 10px;
}

.main-container {
  margin-bottom: 8px;
}

/* The block that holds the title, and other components */
.entry {
    overflow: hidden;
    margin-left: 3px;
    opacity: 1;
}
/* For all links */
a {text-decoration : none;}

/* For the text in the brackets */

.domain {
    color: #888;
    white-space: nowrap;
}


.domain a {
    color: #888;
    display: inline-block;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    vertical-align: middle;
    max-width: 19em;
    font-size : small;
}

.domain a:hover {
  text-decoration: underline;
}



/* For the titles of the lists */
.thing .title {
    color: blue;
    outline: none;
    margin-right: .4em;
    padding: 0;
    overflow: hidden;
}

.title {
    font-size: medium;
    font-weight: normal;
    margin-bottom: 1px;
}


/* Tagline and author section  */

.tagline {
    color: #888;
}

.tagline a {
    color: #369;
    text-decoration: none;
}

.tagline a:hover {
    text-decoration: underline;
}

.author {
    margin-right: 0.5em;
}


/* for number of comments and share link */

.flat-list {
    list-style : none;
    display: inline;
    padding: 1px 0;
}


li a {
    color: #888;
    font-weight: bold;
    padding: 0 1px;
}

.buttons li {
    display: inline-block;
    border: none;
    padding-right: 4px;
    line-height: 1.6em;
}


.buttons a:hover {
    text-decoration: underline;
}


/* for arrows */

.midcol {
    float: left;
    margin-right: 7px;
    margin-left: 7px;
    background: transparent;
    overflow: hidden;
    width: 4.1ex;
}

.arrow.down {
    background-image: url(https://www.redditstatic.com/sprite-reddit.ZDiVRxCXXWg.png);
    background-position: 0px -865px;
    background-repeat: no-repeat;
}

.arrow.up {
    background-image: url(https://www.redditstatic.com/sprite-reddit.ZDiVRxCXXWg.png);
    background-position: -42px -865px;
    background-repeat: no-repeat;
}

.arrow {
    margin: 2px 0px 0px 0px;
    width: 100%;
    height: 16px;
    display: block;
    cursor: pointer;
    background-position: center center;
    background-repeat: no-repeat;
    width: 15px;
    margin-left: auto;
    margin-right: auto;
    outline: none;
}

/* for number of votes */
.score {
    text-align: center;
    color: #c6c6c6;
}

/* For number listings */
.rank {
    float: left;
    margin-top: 15px;
    color: #c6c6c6;
    font-family: arial;
    font-size: medium;
    text-align: right;
}
.rank {
    overflow: hidden;
}

.help-block,
.error-page {
  color : #ff0000 ;
}

/* for showing error message */
.error-page {
  font-size: medium;
  font-weight: normal;
}


[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
  display: none !important;
}

